feat(discord): require project allowlist

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1234,6 +1234,27 @@
                 </div>
               </div>
 
+              <!-- Task Projects Card -->
+              <div class="card settings-card">
+                <div class="card-body">
+                  <h5 class="settings-card-title mb-3">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 8px; opacity: 0.7;">
+                      <path d="M3 7h18"></path>
+                      <path d="M5 7l1 12h12l1-12"></path>
+                      <path d="M9 7V5a3 3 0 0 1 6 0v2"></path>
+                    </svg>
+                    Task Projects
+                  </h5>
+                  <div class="form-group mb-2">
+                    <label class="settings-label">Project Allowlist</label>
+                    <div class="list-group" id="taskProjectAllowlistList"></div>
+                    <small class="text-muted d-block mt-2">
+                      Star recent projects to allow Discord tasks to run in them.
+                    </small>
+                  </div>
+                </div>
+              </div>
+
               <!-- Keyboard Shortcuts Card (Full Width) -->
               <div class="card settings-card" style="grid-column: span 2;">
                 <div class="card-body">
