fix: robust diff stats + DIFFS column (event-driven refresh)

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -371,7 +371,9 @@
                           <!--CTX-->
                           <col width="8%" />
                           <!--COST-->
-                          <col width="17%" />
+                          <col width="8%" />
+                          <!--DIFFS-->
+                          <col width="9%" />
                           <!--ACTIONS-->
                         </colgroup>
                         <thead>
@@ -396,6 +398,9 @@
                             </th>
                             <th scope="col" class="sortable" data-sort="cost">
                               COST
+                            </th>
+                            <th scope="col" class="sortable" data-sort="diffs" title="Additions / deletions from git status (staged + unstaged)">
+                              DIFFS
                             </th>
                             <th scope="col">ACTIONS</th>
                           </tr>
