feat(gui): revise PR prompt and add beta tags

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -136,6 +136,7 @@
                           data-agent-name="Amp"
                           type="button"
                         >
+                          <span class="beta-badge" aria-hidden="true">Beta</span>
                           <img src="images/ampcode.png" alt="Amp" />
                         </button>
                         <button
@@ -144,6 +145,7 @@
                           data-agent-name="Droid"
                           type="button"
                         >
+                          <span class="beta-badge" aria-hidden="true">Beta</span>
                           <img src="images/factorydroid.png" alt="Droid" />
                         </button>
                         <button
@@ -152,6 +154,7 @@
                           data-agent-name="OpenCode"
                           type="button"
                         >
+                          <span class="beta-badge" aria-hidden="true">Beta</span>
                           <img src="images/opencode.png" alt="OpenCode" />
                         </button>
                       </div>
