refactor(ui): rename Command Center to Analytics Center
Updates section title and comments to better reflect the dashboard purpose.

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -860,7 +860,7 @@
         </div>
       </section>
 
-      <!--Analytics - Phantom Command Center-->
+      <!--Analytics - Analytics Center-->
       <section
         id="analyticsPage"
         class="analytics-page page container-fluid"
@@ -871,7 +871,7 @@
             <div class="container-fluid p-0">
               <div class="row no-gutters">
                 <div class="col-12">
-                  <h5 class="mb-2 analytics-title">Command Center</h5>
+                  <h5 class="mb-2 analytics-title">Analytics Center</h5>
                 </div>
                 <div class="col-12">
                   <div class="phantom-time-range analytics-range">
