--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1501,6 +1501,35 @@
       </div>
     </div>
 
+    <!-- Delete Task Uncommitted Changes Warning Modal -->
+    <div class="modal fade mt-5" id="deleteTaskWarningModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog mt-5" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">
+              <i class="fal fa-exclamation-triangle text-warning"></i> Uncommitted Changes
+            </h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>This task's worktree has <strong>uncommitted changes</strong> that will be permanently lost:</p>
+            <p class="text-muted small" id="deleteTaskWorktreePath"></p>
+            <p class="text-warning mb-0">
+              <strong>Are you sure you want to delete this task?</strong>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-sm btn-danger" id="confirmDeleteTask">
+              <i class="fal fa-trash-alt"></i> Delete Anyway
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--Universal Footer-->
     <footer class="footer">
       <div class="container-fluid">
