feat(auth): automate Claude setup token login

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -733,14 +733,15 @@
                       />
                       <div class="auth-footer">
                         <p class="auth-help">
-                          Run <code>claude setup-token</code>, paste the token
-                          here, and click Save Credentials.
+                          Click Connect Claude to open the browser and sign in.
+                          We’ll save the setup token automatically. If needed,
+                          paste a token here and click Save Credentials.
                         </p>
                         <button
                           class="btn btn-default btn-sm btn-brand auth-login"
                           data-auth-action="claude-login"
                         >
-                          Generate setup token
+                          Connect Claude
                         </button>
                       </div>
                     </div>
