fix(ui): resolve encoding issue with modal close buttons
Replace &times; HTML entities with Font Awesome icons to fix UTF-8
rendering issue causing "Ã—" to display instead of "×". Also add
missing charset meta tag.

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Phantom</title>
     <link
       rel="stylesheet"
@@ -1460,7 +1461,7 @@
                 data-dismiss="modal"
                 aria-label="Close"
               >
-                <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true"><i class="fal fa-times"></i></span>
               </button>
             </div>
             <div class="modal-body">
@@ -1520,7 +1521,7 @@
               data-dismiss="modal"
               aria-label="Close"
             >
-              <span aria-hidden="true">&times;</span>
+              <span aria-hidden="true"><i class="fal fa-times"></i></span>
             </button>
           </div>
           <div class="modal-body">
@@ -1561,7 +1562,7 @@
               <i class="fal fa-exclamation-triangle text-warning"></i> Uncommitted Changes
             </h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+              <span aria-hidden="true"><i class="fal fa-times"></i></span>
             </button>
           </div>
           <div class="modal-body">
@@ -1612,7 +1613,7 @@
         </div>
         <div class="update-toast-actions">
           <button id="update-install-btn" class="update-btn-install">Install</button>
-          <button id="update-dismiss-btn" class="update-btn-dismiss">&times;</button>
+          <button id="update-dismiss-btn" class="update-btn-dismiss"><i class="fal fa-times"></i></button>
         </div>
       </div>
       <div id="update-progress-bar" class="update-progress-bar hidden">
