feat(summaries): add dedicated summaries agent setting
Add a setting to select a dedicated agent for all AI-powered summaries
(task titles, status summaries, and worktree branch names), regardless
of which agent runs the task. Defaults to Amp if installed (free).

- Add summariesAgent field to Settings struct
- Add override functions to summarize.rs and namegen.rs
- Add Amp support to namegen.rs (was previously unsupported)
- Add dropdown UI in AI Summaries settings card
- Auto-default to Amp if installed and no preference set

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1211,8 +1211,22 @@
                     </div>
                   </div>
                   <small class="text-muted d-block mb-3">
-                    Generate smart task titles using AI (Claude Haiku / GPT-5.1-codex-mini)
+                    Generate smart task titles, status summaries, and branch names using AI.
                   </small>
+
+                  <!-- Summaries Agent Dropdown -->
+                  <div class="form-group mb-3" id="summariesAgentGroup">
+                    <label class="settings-label">Summaries Agent</label>
+                    <select class="form-select" id="summariesAgent">
+                      <option value="auto">Auto (use task's agent)</option>
+                      <option value="amp">Amp (free)</option>
+                      <option value="codex">Codex (GPT-5.1-codex-mini)</option>
+                      <option value="claude-code">Claude (Haiku)</option>
+                    </select>
+                    <small class="text-muted d-block mt-1">
+                      Select which agent generates summaries. Amp is free and recommended if installed.
+                    </small>
+                  </div>
 
                   <!-- Divider -->
                   <hr style="border-color: rgba(255,255,255,0.1); margin: 1rem 0;">
