--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1187,6 +1187,19 @@
                         <input type="checkbox" id="agentNotificationStack" />
                       </div>
                     </div>
+                    <div class="settings-toggle-row">
+                      <span class="settings-toggle-label">Auto-dismiss after</span>
+                      <div class="d-flex align-items-center gap-2">
+                        <select id="agentNotificationTimeout" class="form-select form-select-sm" style="width: auto; min-width: 100px;">
+                          <option value="0">Never</option>
+                          <option value="5">5 seconds</option>
+                          <option value="10">10 seconds</option>
+                          <option value="15">15 seconds</option>
+                          <option value="30">30 seconds</option>
+                          <option value="60">1 minute</option>
+                        </select>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
