--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1217,7 +1217,7 @@
                   <!-- Summaries Agent Dropdown -->
                   <div class="form-group mb-3" id="summariesAgentGroup">
                     <label class="settings-label">Summaries Agent</label>
-                    <select class="form-select" id="summariesAgent">
+                    <select class="form-control" id="summariesAgent">
                       <option value="auto">Auto (use task's agent)</option>
                       <option value="amp">Amp (free)</option>
                       <option value="codex">Codex (GPT-5.1-codex-mini)</option>
