--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1211,8 +1211,17 @@
                     </div>
                   </div>
                   <small class="text-muted d-block mb-3">
-                    Generate smart task titles using AI (Claude Haiku / GPT-5.1-codex-mini)
+                    Generate smart task titles, status summaries, and branch names using AI.
                   </small>
+
+                  <!-- Summaries Agent Dropdown -->
+                  <div class="form-group mb-3" id="summariesAgentGroup">
+                    <label class="settings-label">Summaries Agent</label>
+                    <div id="summariesAgentDropdown" class="custom-dropdown-wrapper"></div>
+                    <small class="text-muted d-block mt-1">
+                      Select which agent generates summaries. Amp is free and recommended if installed.
+                    </small>
+                  </div>
 
                   <!-- Divider -->
                   <hr style="border-color: rgba(255,255,255,0.1); margin: 1rem 0;">
