feat(notifications): add auto-dismiss on timeout and focus (#9)
* feat(notifications): add auto-dismiss on timeout and focus

Notifications now auto-dismiss after a configurable timeout (5s-60s)
and when the user focuses on the related chat log window.

- Add agentNotificationTimeout setting with dropdown UI
- Create dismiss_notifications_for_task Tauri command
- Pass timeout to notification windows via URL param
- Dismiss notifications on chat window focus/open

* fix(ui): align auto-dismiss dropdown styling

* fix(tauri): bridge dismiss notifications

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1187,6 +1187,10 @@
                         <input type="checkbox" id="agentNotificationStack" />
                       </div>
                     </div>
+                    <div class="settings-toggle-row">
+                      <span class="settings-toggle-label">Auto-dismiss after</span>
+                      <div id="agentNotificationTimeoutDropdown" class="settings-dropdown"></div>
+                    </div>
                   </div>
                 </div>
               </div>
