feat(codex): add multi-account switching

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -561,6 +561,26 @@
                       </div>
                     </div>
                     <div class="auth-body">
+                      <div class="codex-accounts">
+                        <div class="codex-accounts-header">
+                          <div class="codex-accounts-title">Accounts</div>
+                          <div class="codex-accounts-actions">
+                            <button
+                              class="btn btn-xs btn-outline-secondary"
+                              data-codex-account-add
+                            >
+                              Add account
+                            </button>
+                            <button
+                              class="btn btn-xs btn-outline-secondary"
+                              data-codex-account-import
+                            >
+                              Import
+                            </button>
+                          </div>
+                        </div>
+                        <div id="codexAccountsList" class="codex-accounts-list"></div>
+                      </div>
                       <label class="muted-label"
                         >OpenAI API key (OPENAI_API_KEY)</label
                       >
