refactor(ui): redesign Codex multi-account section
Visual overhaul to match app's design language:
- Replace blue active border with warm maroon/pink brand colors
- Convert "Active" disabled button to green status badge
- Add email privacy: redacted by default with eye toggle
- Style buttons consistently (pink login, subtle remove)
- Add plan badge styling and status color indicators

UX improvements:
- Merge Add/Import into single smart "Add" button that auto-detects
  existing ~/.codex and imports it, or creates new account
- Remove redundant email from header (now only in accounts list)
- Add hover states and smooth transitions throughout
- Better visual hierarchy with gradient backgrounds

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -452,54 +452,6 @@
                           <div class="auth-sub" data-auth-status="codex">
                             Not connected
                           </div>
-                          <div
-                            class="auth-email-wrapper"
-                            hidden
-                            data-auth-email-wrapper="codex"
-                          >
-                            <span
-                              class="auth-email redacted"
-                              data-auth-email="codex"
-                            ></span>
-                            <button
-                              type="button"
-                              class="auth-email-toggle"
-                              data-toggle-email="codex"
-                              title="Show email"
-                            >
-                              <svg
-                                class="eye-icon"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                stroke="currentColor"
-                                stroke-width="2"
-                              >
-                                <path
-                                  class="eye-open"
-                                  d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
-                                ></path>
-                                <circle
-                                  class="eye-open"
-                                  cx="12"
-                                  cy="12"
-                                  r="3"
-                                ></circle>
-                                <path
-                                  class="eye-closed"
-                                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
-                                  style="display: none"
-                                ></path>
-                                <line
-                                  class="eye-closed"
-                                  x1="1"
-                                  y1="1"
-                                  x2="23"
-                                  y2="23"
-                                  style="display: none"
-                                ></line>
-                              </svg>
-                            </button>
-                          </div>
                         </div>
                       </div>
                       <!-- Inline Usage Tracker -->
@@ -564,20 +516,16 @@
                       <div class="codex-accounts">
                         <div class="codex-accounts-header">
                           <div class="codex-accounts-title">Accounts</div>
-                          <div class="codex-accounts-actions">
-                            <button
-                              class="btn btn-xs btn-outline-secondary"
-                              data-codex-account-add
-                            >
-                              Add account
-                            </button>
-                            <button
-                              class="btn btn-xs btn-outline-secondary"
-                              data-codex-account-import
-                            >
-                              Import
-                            </button>
-                          </div>
+                          <button
+                            class="btn codex-add-btn"
+                            data-codex-account-add
+                          >
+                            <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round">
+                              <line x1="12" y1="5" x2="12" y2="19"></line>
+                              <line x1="5" y1="12" x2="19" y2="12"></line>
+                            </svg>
+                            Add
+                          </button>
                         </div>
                         <div id="codexAccountsList" class="codex-accounts-list"></div>
                       </div>
