fix(review): polish Review Center styling and fix navbar icon
- Change fa-code-compare to fa-code-merge (valid FA icon)
- Apply consistent gradient backgrounds to panels
- Fix grid margins to align with header card (1.5rem)
- Add top margin for spacing below header
- Add review-page specific form control styling
- Use consistent proxima_nova fonts for labels and headers
- Update empty state styling with italic placeholder text

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -71,7 +71,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" data-page="reviewPage">
-                <i class="fal fa-code-compare"></i> Review
+                <i class="fal fa-code-merge"></i> Review
               </a>
             </li>
           </ul>
@@ -1132,7 +1132,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col-12 col-lg-4">
                       <h5 class="mb-0 review-title">
-                        <i class="fal fa-code-compare mr-2"></i>
+                        <i class="fal fa-code-merge mr-2"></i>
                         Review Center
                       </h5>
                       <div class="review-subtitle text-muted">
