refactor(review): use CustomDropdown for task selector
- Replace native <select> with CustomDropdown component
- Add review-page specific dropdown styling (dark theme, brand colors)
- Show task descriptions as tooltips on hover
- Handle selection via onChange callback

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1143,9 +1143,7 @@
                       <div class="review-controls">
                         <div class="review-control">
                           <label class="muted-label mb-1">Task</label>
-                          <select class="form-control form-control-sm" id="reviewTaskSelector">
-                            <option value="">Select a task...</option>
-                          </select>
+                          <div id="reviewTaskSelector" class="custom-dropdown-wrapper"></div>
                         </div>
                         <div class="review-control">
                           <label class="muted-label mb-1">Compare</label>
