feat(review): wire up Review Center with real git data
- Add project selector dropdown with task filtering
- Implement commit timeline showing commits since merge-base
- Wire up file list with real git diff stats (additions/deletions)
- Implement split and unified diff views from actual git output
- Add friendly task IDs (#uuid suffix) to frontend and Discord messages
- Support compare modes: vs Main, vs Base, History

--- a/gui/menu.html
+++ b/gui/menu.html
@@ -1142,6 +1142,10 @@
                     <div class="col-12 col-lg-8 mt-3 mt-lg-0">
                       <div class="review-controls">
                         <div class="review-control">
+                          <label class="muted-label mb-1">Project</label>
+                          <div id="reviewProjectSelector" class="custom-dropdown-wrapper"></div>
+                        </div>
+                        <div class="review-control">
                           <label class="muted-label mb-1">Task</label>
                           <div id="reviewTaskSelector" class="custom-dropdown-wrapper"></div>
                         </div>
